--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "node-youtube",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " node index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "samriddha",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongodb": "^6.13.1",
     "mongoose": "^8.10.2",
-    "nodemon": "^3.1.9",
     "prettier": "^3.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
